# sample-fixed-schema-response-mcp

./: .gitignore  AWS_DEPLOYMENT_GUIDE.md  CODE_OF_CONDUCT.md  README.md  debug_mcp_server.py  malicious.json  pyproject.toml  setup.sh  simple_mcp_server.py  test_content_length.py  test_http_client.py  test_mcp_server.sh  test_mcp_standalone.py  test_mcp_wrapper.py
.kiro/settings/: mcp.json
fixed_schema_mcp_server/: .coveragerc  CHANGELOG.md  Dockerfile  GENERIC_USAGE.md  README.md  __init__.py  combined_server.py  config.json  demo_add_schema.py  fastmcp_server.py  fastmcp_server_http.py  http_server.py  mcp_wrapper.py  pyproject.toml  requirements.txt  run_fastmcp.sh  run_mcp.sh  run_security_tests.py  run_server.py  run_tests.py  security_config.py  setup.py  setup.sh  standalone_mcp.py  test_client.py  test_fastmcp.py  test_generic_server.py  test_mcp_env_credentials.py  test_model_config.py  test_schemas.py  test_security.py
fixed_schema_mcp_server/config/: config.json
fixed_schema_mcp_server/config/schemas/: article_summary.json  movie_review.json  product_info.json  recipe.json  sports_stats.json  test@schema.json  troubleshooting_guide.json  weather_report.json
fixed_schema_mcp_server/docs/: ADDING_SCHEMAS.md  MCP_CREDENTIALS_SETUP.md  MODEL_CONFIGURATION.md  Q_CHAT_INTEGRATION.md  SECURITY_BEST_PRACTICES.md  kiro_integration.md
fixed_schema_mcp_server/docs/api/: README.md
fixed_schema_mcp_server/docs/installation/: README.md
fixed_schema_mcp_server/docs/performance/: README.md
fixed_schema_mcp_server/docs/schema/: README.md
fixed_schema_mcp_server/docs/troubleshooting/: README.md
fixed_schema_mcp_server/examples/: mcp_config_with_credentials.json
fixed_schema_mcp_server/fixed_schema_mcp_server/: __init__.py  main.py
fixed_schema_mcp_server/fixed_schema_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fixed_schema_mcp_server/fixed_schema_mcp_server/config/: __init__.py  config_manager.py  config_model.py  config_watcher.py
fixed_schema_mcp_server/test_config/: config.json
(+58 files in other folders)
