[project]
name = "fixed-schema-mcp-server"
version = "0.2.0"
description = "A FastMCP server that returns responses in a fixed schema format using AWS Bedrock Claude"
readme = "fixed_schema_mcp_server/README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Fixed Schema MCP Contributors"}
]
keywords = ["mcp", "fastmcp", "schema", "bedrock", "claude", "structured-output", "json-schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=0.1.0",
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
all = ["openai>=1.0.0", "anthropic>=0.25.0"]

[project.scripts]
fixed-schema-mcp-server = "fixed_schema_mcp_server.fastmcp_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/fixed-schema-mcp-server"
Documentation = "https://github.com/yourusername/fixed-schema-mcp-server/blob/main/fixed_schema_mcp_server/README.md"
Repository = "https://github.com/yourusername/fixed-schema-mcp-server"
Issues = "https://github.com/yourusername/fixed-schema-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fixed_schema_mcp_server"]
