[project]
name = "fixed-schema-mcp-server"
version = "0.2.0"
description = "A FastMCP server that returns responses in a fixed schema format using AWS Bedrock Claude"
dependencies = [
    "fastmcp>=0.1.0",
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "jsonschema>=4.0.0",
]
requires-python = ">=3.10"